# Bookbite

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  add_confirmation_tokens.sql  add_email_verification.sql  bookbite.sql
backend/: .env.example  CMakeLists.txt
backend/include/businessLogic/: authService.h  reservationService.h  restaurantService.h  reviewService.h
backend/include/dataAccess/: paymentData.h  reservationData.h  restaurantData.h  reviewData.h  tableData.h  userData.h
backend/include/database/: db_config.h  db_manager.h
backend/include/models/: customer.h  dietary_restriction.h  occasion.h  payment.h  promo_code.h  reservation.h  restaurant.h  restaurant_table.h  review.h  table.h  user.h  userRole.h
backend/include/presentation/: apiController.h
backend/include/services/: customer_service.h  dietary_restriction_service.h  occasion_service.h  promo_code_service.h  reservation_service.h  restaurant_service.h  user_service.h
backend/include/utils/: dbConnection.h  emailService.h  envLoader.h
backend/src/: main.cpp
backend/src/businessLogic/: authService.cpp  reservationService.cpp  restaurantService.cpp  reviewService.cpp
backend/src/dataAccess/: paymentData.cpp  reservationData.cpp  restaurantData.cpp  reviewData.cpp  tableData.cpp  userData.cpp
backend/src/database/: db_manager.cpp
backend/src/models/: payment.cpp  reservation.cpp  restaurant.cpp  review.cpp  table.cpp  user.cpp  userRole.cpp
backend/src/presentation/: apiController.cpp
backend/src/services/: customer_service.cpp  dietary_restriction_service.cpp  occasion_service.cpp  promo_code_service.cpp  reservation_service.cpp  restaurant_service.cpp  user_service.cpp
backend/src/utils/: dbConnection.cpp  emailService.cpp  envLoader.cpp
database/: schema.sql  update_schema.sql
frontend/: README.md  app.js  package-lock.json  package.json
frontend/public/css/: admin.css  restaurants.css  reviews.css  style.css
frontend/public/js/: admin-dashboard.js  admin-edit-reservation.js  admin-forms.js  admin-restaurants.js  admin-users.js  api-debug.js  image-utils.js  main.js  register.js  reservation.js  reviews.js  verify-email.js
frontend/views/layouts/: admin.ejs  main.ejs
frontend/views/pages/: index.ejs  login.ejs  make-reservation.ejs  my-reservations.ejs  register.ejs  reservation-confirmed.ejs  restaurant-detail.ejs  restaurants.ejs  verify-email.ejs
frontend/views/partials/: alerts.ejs  footer.ejs  header.ejs
ios/: APIService.swift  AddReviewView.swift  AuthenticationView.swift  BookBiteApp.swift  ContentView.swift  MakeReservationView.swift  Models.swift  ProfileView.swift  README.md  ReservationsView.swift  RestaurantDetailView.swift  RestaurantsView.swift
mobile/BoobBite/BoobBite/: APIService.swift  AddReviewView.swift  BoobBiteApp.swift  ContentView.swift  MakeReservationView.swift  PaymentView.swift  RestaurantDetailView.swift  Theme.swift
mobile/BoobBite/BoobBite.xcodeproj/: project.pbxproj
mobile/BoobBite/BoobBiteTests/: BoobBiteTests.swift
mobile/BoobBite/BoobBiteUITests/: BoobBiteUITests.swift  BoobBiteUITestsLaunchTests.swift
mobile/BookBite/BookBite/: APIService.swift  AddReviewView.swift  AuthenticationManager.swift  AuthenticationView.swift  BookBiteApp.swift  CachedAsyncImage.swift  ContentView.swift  MakeReservationView.swift  Models.swift  ProfileView.swift  ReservationsView.swift  RestaurantDetailView.swift  RestaurantsView.swift  (+2 more)
mobile/BookBite/BookBite.xcodeproj/: project.pbxproj
nextJSfrontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
(+39 files in other folders)
